Fixed more bugs & finished target regions pages

--- a/views/pages/dashboard/dashboard.ejs
+++ b/views/pages/dashboard/dashboard.ejs
@@ -63,9 +63,9 @@
 	<div class="col-sm-6 col-md-6 col-xl-4 mt-2">
 		<div class="card" style="width: 18rem;">
 			<div class="card-body">
-				<h5 class="card-title">Conserved regions</h5>
+				<h5 class="card-title">Target regions</h5>
 				<h6 class="card-subtitle mb-2 text-muted">Edit/Remove & Export data</h6>
-				<p class="card-text">Use this page in order to edit or remove new conserved region data to database. You
+				<p class="card-text">Use this page in order to edit or remove new target region data to database. You
 					can also export the table data to .csv format.</p>
 				<a href="/dashboard/manage_regions" class="card-link">Go to page</a>
 			</div>
