--- a/views/pages/partials/show_region_ampSequences.ejs
+++ b/views/pages/partials/show_region_ampSequences.ejs
@@ -1,9 +1,9 @@
-<div class="modal fade" id="showRegionPrimers" tabindex="-1" role="dialog" aria-labelledby="showRegionPrimersTitle"
-	aria-hidden="true">
+<div class="modal fade" id="showRegionAmpSequence" tabindex="-1" role="dialog"
+	aria-labelledby="showRegionAmpSequenceTitle" aria-hidden="true">
 	<div class="modal-dialog modal-lg modal-dialog-centered" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="showRegionPrimersTitle">Primers</h5>
+				<h5 class="modal-title" id="showRegionAmpSequenceTitle">Amplified Sequences</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
@@ -15,9 +15,12 @@
 							<th scope="col">Name</th>
 							<th scope="col">Sequence</th>
 							<th scope="col">BLAST</th>
+							<th scope="col">UNITE</th>
+							<th scope="col">Bold Systems</th>
+							<th scope="col">PhytophthoraDB</th>
 							<th scope="col">Notes</th>
 						</thead>
-						<tbody id="region_primers">
+						<tbody id="region_ampsequences">
 
 						</tbody>
 					</table>
