--- a/views/pages/dashboard/manage_primers.ejs
+++ b/views/pages/dashboard/manage_primers.ejs
@@ -1,3 +1,11 @@
+<%- contentFor('styles') %>
+<style>
+	#searchFor {
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+</style>
+
 <%- contentFor('header') %>
 <header>
 	<h1 class="page-title text-center mt-5"><%= title %></h1>
@@ -9,6 +17,21 @@
 	<h1 class="h2">Manage primer data</h1>
 </div>
 <div class="container-fluid">
+	<form id="search" action="/dashboard/primers/search" method="POST" class="form-inline my-2 my-lg-0">
+		<div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<select name="searchFor" id="searchFor" class="custom-select">
+					<option selected disabled>Search for</option>
+					<option value="primer">Primer</option>
+					<option value="sequence">Sequence</option>
+				</select>
+			</div>
+			<input type="search" placeholder="Search" class="form-control" name="search" aria-label="Search">
+			<div class="input-group-append">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</div>
+		</div>
+	</form>
 	<div class="table-responsive mb-3">
 		<table class="table table-striped table-bordered table-hover mt-5">
 			<thead class="thead-dark">
@@ -49,7 +72,7 @@
 						<% } %>
 					</td>
 					<td align="center" style="vertical-align:middle;">
-						<a href="/dashboard/edit/<%= data.docs[i]._id %>">
+						<a href="/dashboard/edit/primer/<%= data.docs[i]._id %>">
 							<svg enable-background="new 0 0 24 24" height="24" version="1.1" viewBox="0 0 24 24"
 								width="24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" fill="currentColor" stroke="none"
@@ -61,7 +84,7 @@
 					</td>
 					<td align="center" style="vertical-align:middle;">
 						<a href="#!" data-toggle="modal" data-target="#confirmDeleteModal"
-							data-href="/dashboard/delete/<%= data.docs[i]._id %>">
+							data-href="/dashboard/delete/primer/<%= data.docs[i]._id %>">
 							<svg enable-background="new 0 0 24 24" height="24" version="1.1" viewBox="0 0 24 24"
 								width="24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" fill="currentColor" stroke="currentColor"
@@ -78,5 +101,5 @@
 	</div>
 	<% include ../partials/_paginate.ejs %>
 	<a href="/dashboard" class="btn btn-primary my-3">Go back</a>
-	<% include ../partials/_confirm_delete.ejs %>
+	<% include ../partials/_confirm_delete_primer.ejs %>
 </div>
