Turned sequence field uniqueness to false due to a problem with indexing

--- a/views/pages/layout_dashboard.ejs
+++ b/views/pages/layout_dashboard.ejs
@@ -29,6 +29,10 @@
 				<nav class="col-md-2 d-none d-md-block bg-light sidebar">
 					<div class="sidebar-sticky">
 						<ul class="nav flex-column">
+							<h6
+								class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+								<span>Insert to data tables</span>
+							</h6>
 							<li class="nav-item">
 								<a class="nav-link <% if(title == 'Dashboard') { %> active  <% } %>" href="/dashboard">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -42,7 +46,7 @@
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#!" data-toggle="modal" data-target="#addFileModal">
+								<a class="nav-link" href="#!" data-toggle="modal" data-target="#addPdfFileModal">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 										fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
 										stroke-linejoin="round" class="feather feather-file-text">
@@ -155,6 +159,43 @@
 											class="sr-only">(current)</span> <% } %>
 									</a>
 								</li>
+								<h6
+									class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+									<span>CLUSTAL</span>
+								</h6>
+								<li class="nav-item">
+									<a class="nav-link" href="#!" data-toggle="modal"
+										data-target="#addClustalFileModal">
+										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+											viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+											stroke-linecap="round" stroke-linejoin="round"
+											class="feather feather-file-text">
+											<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+											<polyline points="14 2 14 8 20 8"></polyline>
+											<line x1="16" y1="13" x2="8" y2="13"></line>
+											<line x1="16" y1="17" x2="8" y2="17"></line>
+											<polyline points="10 9 9 9 8 9"></polyline>
+										</svg>
+										Add new CLUSTAL alignment file
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link <% if(title == 'CLUSTAL Info') { %> active <% } %>"
+										href="/dashboard/clustal">
+										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+											viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+											stroke-linecap="round" stroke-linejoin="round"
+											class="feather feather-file-text">
+											<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+											<polyline points="14 2 14 8 20 8"></polyline>
+											<line x1="16" y1="13" x2="8" y2="13"></line>
+											<line x1="16" y1="17" x2="8" y2="17"></line>
+											<polyline points="10 9 9 9 8 9"></polyline>
+										</svg>
+										CLUSTAL Info <% if(title == 'CLUSTAL Info') { %> <span
+											class="sr-only">(current)</span> <% } %>
+									</a>
+								</li>
 							</ul>
 					</div>
 				</nav>
@@ -163,7 +204,8 @@
 					<%- body %>
 				</main>
 			</div>
-			<% include ./partials/upload_file.ejs %>
+			<% include ./partials/upload_pdf_file.ejs %>
+			<% include ./partials/upload_clustal_file.ejs %>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -177,9 +219,19 @@
 		<script type="text/javascript" src="/javascript/bootstrap-auto-dismiss.js"></script>
 		<!-- Script for file upload label update on select -->
 		<script>
-			let inputFile = document.querySelector(' #inputFile'); inputFile.addEventListener('change', () => {
-				let fileName = inputFile.value.slice(12);
-				document.getElementById('fileLabel').innerHTML = fileName;
+			$('#addPdfFileModal').on('show.bs.modal', (e) => {
+				let inputFile = document.querySelector('#inputPdfFile');
+				inputFile.addEventListener('change', () => {
+					let fileName = inputFile.value.slice(12);
+					document.getElementById('pdfFileLabel').innerHTML = fileName;
+				});
+			});
+			$('#addClustalFileModal').on('show.bs.modal', (e) => {
+				let inputFile = document.querySelector('#inputFile');
+				inputFile.addEventListener('change', () => {
+					let fileName = inputFile.value.slice(12);
+					document.getElementById('fileLabel').innerHTML = fileName;
+				});
 			});
 		</script>
 		<%- defineContent('scripts') %>
