--- a/views/pages/dashboard/clustal.ejs
+++ b/views/pages/dashboard/clustal.ejs
@@ -4,5 +4,15 @@
 	<h1 class="h2">CLUSTAL Info</h1>
 </div>
 <div class="container">
+	<div class="table-responsive mb-3">
+		<table class="table table-striped table-bordered table-hover mt-5">
+			<thead class="thead-dark">
+				<th scope="col">CLUSTAL</th>
+				<th scope="col">Notes</th>
+			</thead>
+		</table>
+		<tbody>
 
+		</tbody>
+	</div>
 </div>
