Fixed typos in retrieving data from db in regions editing

--- a/views/pages/dashboard/edit_regions.ejs
+++ b/views/pages/dashboard/edit_regions.ejs
@@ -174,12 +174,12 @@
 							placeholder="UNITE">
 						<label for="<%= 'inputAmpSequenceBold'+(i+1) %>">Bold Systems</label>
 						<input type="text" class="form-control mb-3" name="ampSequenceBold"
-							id="<%= 'inputAmpSequenceBold'+(i+1) %>" value="<%= data.amp_sequences[i].bold %>"
+							id="<%= 'inputAmpSequenceBold'+(i+1) %>" value="<%= data.amp_sequences[i].boldsystems %>"
 							placeholder="Bold Systems">
 						<label for="<%= 'inputAmpSequencePhyto'+(i+1) %>">PhytophthoraDB</label>
 						<input type="text" class="form-control mb-3" name="ampSequencePhyto"
-							id="<%= 'inputAmpSequencePhyto'+(i+1) %>" value="<%= data.amp_sequences[i].phyto %>"
-							placeholder="PhytophthoraDB">
+							id="<%= 'inputAmpSequencePhyto'+(i+1) %>"
+							value="<%= data.amp_sequences[i].phytophthoradb %>" placeholder="PhytophthoraDB">
 						<label for="inputAmpSequenceNote">Note</label>
 						<input type="text" class="form-control mb-3" name="ampSequenceNote" id="inputAmpSequenceNote"
 							value="<%= data.amp_sequences[i].notes %>" placeholder="Note">
