Added CLUSTAL functionality & fixed some bugs

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,7 @@
 		<a href="primers?page=1&perPage=<%= perPage %>" class="btn btn-primary mt-3">Primers</a>
 		<a href="#!" class="btn btn-primary mt-3">Oligonucleotides</a>
 		<a href="regions?page=1&perPage=<%= perPage %>" class="btn btn-primary mt-3">Target Regions</a>
+		<a href="clustal?page=1&perPage=<%= perPage %>" class="btn btn-primary mt-3">CLUSTAL</a>
 		<hr class="my-5">
 		<div class="row">
 			<div class="col-md-4">
@@ -18,7 +19,7 @@
 				<a href="/users/login" class="btn btn-primary mt-3">Sign in</a>
 				<a href="/users/register" class="btn btn-primary mt-3">Sign up</a>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 mt-4 mt-sm-0">
 				<p>Research by:</p>
 				<p>Micaela Martins</p>
 			</div>
