--- a/views/pages/dashboard/manage_clustal.ejs
+++ b/views/pages/dashboard/manage_clustal.ejs
@@ -1,78 +1,30 @@
-<%- contentFor('styles') %>
-<style>
-	#searchFor {
-		border-top-right-radius: 0;
-		border-bottom-right-radius: 0;
-	}
-</style>
-
-<%- contentFor('header') %>
-<header>
-	<h1 class="page-title text-center mt-5"><%= title %></h1>
-</header>
-
 <%- contentFor('body') %>
 <% include ../partials/messages.ejs %>
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-	<h1 class="h2">Manage primer data</h1>
+	<h1 class="h2">CLUSTAL Info</h1>
 </div>
-<div class="container-fluid">
-	<form id="search" action="/dashboard/primers/search" method="POST" class="form-inline my-2 my-lg-0">
-		<div class="input-group mb-3">
-			<div class="input-group-prepend">
-				<select name="searchFor" id="searchFor" class="custom-select">
-					<option selected disabled>Search for</option>
-					<option value="primer">Primer</option>
-					<option value="sequence">Sequence</option>
-				</select>
-			</div>
-			<input type="search" placeholder="Search" class="form-control" name="search" aria-label="Search">
-			<div class="input-group-append">
-				<button class="btn btn-outline-success my-sm-0" type="submit">Search</button>
-			</div>
-		</div>
-	</form>
+<div class="container">
 	<div class="table-responsive mb-3">
 		<table class="table table-striped table-bordered table-hover mt-5">
 			<thead class="thead-dark">
-				<th scope="col">Primer</th>
-				<th scope="col">Sequence</th>
-				<th scope="col">Sites/Articles</th>
-				<th scope="col">BLAST Results</th>
+				<th scope="col">CLUSTAL</th>
 				<th scope="col">Notes</th>
 				<th scope="col">Edit</th>
 				<th scope="col">Delete</th>
 			</thead>
 			<tbody>
-				<% for(i in data.docs) { %>
+				<% if(data != undefined) { %>
+
+				<% for(let i = 0; i < data.docs.length; i++) { %>
 				<tr>
-					<th scope="row"><%= data.docs[i].primer %></th>
-					<td><%= data.docs[i].sequence %></td>
 					<td>
-						<% for(let j = 0; j < data.docs[i].articles.length; j++) { %>
-						<% if (data.docs[i].articles[j].pdf) { %>
-						<a href="/download/article/<%= data.docs[i].articles[j].link %>"
-							target="_blank"><%= data.docs[i].articles[j].name %></a>
-						<% } else { %>
-						<a href="<%= data.docs[i].articles[j].link %>"
-							target="_blank"><%= data.docs[i].articles[j].name %></a>
-						<% } %>
-						<% if (j != data.docs[i].articles.length -1) { %>
-						<hr>
-						<% } %>
-						<% } %>
+						<a href="/download/clustal/<%= data.docs[i].file.link %>"><%= data.docs[i].file.name %></a>
 					</td>
-					<td><%= data.docs[i].blast %></td>
 					<td>
-						<% for(let j = 0; j < data.docs[i].notes.length; j++) { %>
-						<%= data.docs[i].notes[j].note %>
-						<% if (j != data.docs[i].notes.length -1) { %>
-						<hr>
-						<% } %>
-						<% } %>
+						<%= data.docs[i].note %>
 					</td>
 					<td align="center" style="vertical-align:middle;">
-						<a href="/dashboard/edit/primer/<%= data.docs[i]._id %>">
+						<a href="/dashboard/edit/clustal/<%= data.docs[i]._id %>">
 							<svg enable-background="new 0 0 24 24" height="24" version="1.1" viewBox="0 0 24 24"
 								width="24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" fill="currentColor" stroke="none"
@@ -84,7 +36,7 @@
 					</td>
 					<td align="center" style="vertical-align:middle;">
 						<a href="#!" data-toggle="modal" data-target="#confirmDeleteModal"
-							data-href="/dashboard/delete/primer/<%= data.docs[i]._id %>">
+							data-href="/dashboard/delete/clustal/<%= data.docs[i]._id %>">
 							<svg enable-background="new 0 0 24 24" height="24" version="1.1" viewBox="0 0 24 24"
 								width="24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" fill="currentColor" stroke="currentColor"
@@ -96,10 +48,11 @@
 					</td>
 				</tr>
 				<% } %>
+				<% } %>
 			</tbody>
 		</table>
 	</div>
 	<% include ../partials/_paginate.ejs %>
 	<a href="/dashboard" class="btn btn-primary my-3">Go back</a>
-	<% include ../partials/_confirm_delete_primer.ejs %>
+	<% include ../partials/_confirm_delete_clustal.ejs %>
 </div>
