--- a/views/pages/layout_dashboard.ejs
+++ b/views/pages/layout_dashboard.ejs
@@ -15,10 +15,10 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-light fixed-top bg-light flex-md-nowrap p-0">
-			<a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">OomycetesInfo</a>
-			<ul class="navbar-nav px-3">
-				<li class="nav-item text-nowrap">
+		<nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
+			<a class="navbar-brand" href="/">OomycetesInfo</a>
+			<ul class="navbar-nav ml-auto px-3">
+				<li class="nav-item">
 					<a class="nav-link" href="/users/logout">Sign out</a>
 				</li>
 			</ul>
@@ -180,8 +180,8 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link <% if(title == 'CLUSTAL Info') { %> active <% } %>"
-										href="/dashboard/clustal">
+									<a class="nav-link <% if(title == 'Insert CLUSTAL') { %> active <% } %>"
+										href="/dashboard/add_clustal">
 										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
 											viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
 											stroke-linecap="round" stroke-linejoin="round"
@@ -192,7 +192,24 @@
 											<line x1="16" y1="17" x2="8" y2="17"></line>
 											<polyline points="10 9 9 9 8 9"></polyline>
 										</svg>
-										CLUSTAL Info <% if(title == 'CLUSTAL Info') { %> <span
+										Insert CLUSTAL <% if(title == 'Insert CLUSTAL') { %> <span
+											class="sr-only">(current)</span> <% } %>
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link <% if(title == 'CLUSTAL Data') { %> active <% } %>"
+										href="/dashboard/manage_clustal">
+										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+											viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+											stroke-linecap="round" stroke-linejoin="round"
+											class="feather feather-file-text">
+											<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+											<polyline points="14 2 14 8 20 8"></polyline>
+											<line x1="16" y1="13" x2="8" y2="13"></line>
+											<line x1="16" y1="17" x2="8" y2="17"></line>
+											<polyline points="10 9 9 9 8 9"></polyline>
+										</svg>
+										CLUSTAL data <% if(title == 'CLUSTAL Data') { %> <span
 											class="sr-only">(current)</span> <% } %>
 									</a>
 								</li>
