Added Oligonucleitodes functionality & fixed pagination

--- a/views/pages/dashboard/dashboard.ejs
+++ b/views/pages/dashboard/dashboard.ejs
@@ -72,3 +72,26 @@
 		</div>
 	</div>
 </div>
+<h2 class="mt-5">CLUSTAL</h2>
+<div class="row">
+	<div class="col-sm-6 col-md-6 col-xl-4 mt-2">
+		<div class="card" style="width: 18rem;">
+			<div class="card-body">
+				<h5 class="card-title">Add CLUSTAL</h5>
+				<h6 class="card-subtitle mb-2 text-muted">Insert data</h6>
+				<p class="card-text">Use this page in order to add CLUSTAL data to database.</p>
+				<a href="/dashboard/add_clustal" class="card-link">Go to page</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-6 col-md-6 col-xl-4 mt-2">
+		<div class="card" style="width: 18rem;">
+			<div class="card-body">
+				<h5 class="card-title">Manage CLUSTAL</h5>
+				<h6 class="card-subtitle mb-2 text-muted">Edit/Remove</h6>
+				<p class="card-text">Use this page in order to edit or remove new CLUSTAL related data to database.</p>
+				<a href="/dashboard/manage_clustal" class="card-link">Go to page</a>
+			</div>
+		</div>
+	</div>
+</div>
