--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
 <main>
 	<div class="container text-center">
 		<a href="primers?page=1&perPage=<%= perPage %>" class="btn btn-primary mt-3">Primers</a>
-		<a href="#!" class="btn btn-primary mt-3">Oligonucleotides</a>
+		<a href="oligonucleotides?page=1&perPage=<%= perPage %>" class="btn btn-primary mt-3">Oligonucleotides</a>
 		<a href="regions?page=1&perPage=<%= perPage %>" class="btn btn-primary mt-3">Target Regions</a>
 		<a href="clustal?page=1&perPage=<%= perPage %>" class="btn btn-primary mt-3">CLUSTAL</a>
 		<hr class="my-5">
