--- a/views/pages/layout_dashboard.ejs
+++ b/views/pages/layout_dashboard.ejs
@@ -7,7 +7,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title><%= title %></title>
+		<title><%= (typeof title != "undefined" ? title : "") %></title>
 
 		<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 		<link href="/stylesheets/dashboard.css" rel="stylesheet">
